* Stripe PI: update `shipping` field to `shipping_address` [ajawadmirza] #4347
* DecidirPlus: Handle `payment_method_id` by `card_brand` [naashton] #4350
* DecidirPlus: `debit` and `payment_method_id` fields [naashton] #4351
* Adyen: Include Application ID in adyen authorize and purchase transactions [peteroas] #4343
* Priority: Add support for `replay_id` field [drkjc] #4352

== Version 1.125.0 (January 20, 2022)
* Wompi: support gateway [therufs] #4173
* Stripe Payment Intents: Add setup_purchase [aenand] #4178
* Ipg: Add new gateway [ajawadmirza] #4171
* Worldpay: Adding support for google pay and apple pay [cristian] #4180
* Worldpay: Adding scrubbing for network token transactions [cristian] #4181
* SafeCharge: Add sg_NotUseCVV field [ajawadmirza] #4177
* PayULatam: Correctly map maestro and condensa card types [dsmcclain] #4182
* StripePaymentIntents: Refactor response for setup_purchase [aenand] #4183
* Wompi: cast error messages to JSON [therufs] #4186
* NMI: Omit initial_transaction_id for CIT [aenand] #4189
* Priority: Support Priority Payment Systems gateway [jessiagee] #4166
* GlobalCollect: Support for Lodging Data [naashton] #4190
* IPG: Add support for sub-merchant and recurring type fields [ajawadmirza] # 4188
* Wompi: Support `installments` option [therufs] #4192
* Stripe PI: add support for `fulfillment_date` and `event_type` [dsmcclain] #4193
* Paysafe: Adjust logic for sending 3DS field [meagabeth] #4194
* Priority: Fix unit test cases [ajawadmirza] #4195
* EBANX: New Gateway Specific Receiver [spreedly-kledoux] #4198
* Wompi: Don't send CVV field if no CVV provided [therufs] #4199
* Worldpay: cleaning order_id according to worldpay rules [cristian] #4197
* Paysafe: Concatenate credentials for headers [meagabeth] #4201
* Stripe Payment Intents: Add metadata to setup_purchase [aenand] #4202
* Priority: Add gateway standard changes [ajawadmirza] #4200
* IPG: Add support for payment by token [ajawadmirza] #4191